Use HTTPS for externalDocs/url

--- a/petstore-api.yaml
+++ b/petstore-api.yaml
@@ -391,7 +391,7 @@ paths:
           description: Order not found
 externalDocs:
   description: Find out more about Swagger
-  url: 'http://swagger.io'
+  url: 'https://swagger.io'
 components:
   parameters:
     pageParam:
