Fix null content in Page DTO if there are no values
MapStruct's presence source checking causes content in the Page DTO to not be set if Page#content is empty

--- a/petstore-api.yaml
+++ b/petstore-api.yaml
@@ -641,3 +641,4 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/Pet'
+              default: []
